src/test/deca/context/valid/override-method-return-float-int.deca
// Description:
//    override de méthode
//
// Resultats:
//
//
// Historique:
//    cree le 16/01/2023

class A {
    float get(int a){}
}

class B extends A {
    int get(int b){}
}
